# haskell-tutorials

tutorial-4/: CHANGELOG.md  tutorial4.cabal
tutorial-4/app/: Main.hs
tutorial-5/: CHANGELOG.md  tutorial6.cabal
tutorial-5/src/: MyLib.hs
tutorial-6/: tutorial6.cabal
tutorial-6/app/: Main.hs
tutorial-7/: CHANGELOG.md  tutorial7.cabal
tutorial-7/app/: Main.hs
tutorial-8/: CHANGELOG.md  tutorial8.cabal
tutorial-8/app/: Main.hs
