cabal-version:      2.4
name:               tutorial7
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Andre Santos
maintainer:         andre.santos0906@gmail.com

-- A copyright notice.
-- copyright:
-- category:
build-type:         Simple
extra-source-files: CHANGELOG.md

executable tutorial7
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >=4.14 && <4.15,
                      gi-gtk,
                      gi-gtk-declarative,
                      gi-gtk-declarative-app-simple,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
